fix: responsive + dark mode

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -19,7 +19,7 @@
         @apply placeholder:text-gray-400 dark:placeholder-gray-600
         border border-gray-200 dark:border-gray-700
         text-sm font-medium text-gray-600 dark:text-gray-400
-        dark:bg-gray-800
+        dark:bg-gray-800 shadow-sm
     }
 
     .input-filter-l {
@@ -27,7 +27,7 @@
         border border-gray-200 dark:border-gray-700
         rounded-t-md rounded-l-md rounded-b-md rounded-r-none
         text-sm font-medium text-gray-600 dark:text-gray-400
-        dark:bg-gray-800
+        dark:bg-gray-800 shadow-sm
     }
 
     .input-filter-r {
@@ -35,16 +35,16 @@
         border border-gray-200 dark:border-gray-700
         rounded-t-md rounded-r-md rounded-b-md rounded-l-none
         text-sm font-medium text-gray-600 dark:text-gray-400
-        dark:bg-gray-800
+        dark:bg-gray-800 shadow-sm
     }
 
     .btn-primary {
-        @apply py-2 px-4 rounded-md bg-blue-500 dark:bg-blue-700 text-white hover:bg-blue-600 dark:hover:bg-blue-800;
+        @apply py-2 px-4 rounded-md shadow-sm bg-indigo-500 dark:bg-indigo-700 text-white hover:bg-indigo-600 dark:hover:bg-indigo-800;
     }
     
 
     .btn-normal {
-        @apply bg-gray-600 hover:bg-gray-500 text-white font-medium p-2 rounded-md text-sm;
+        @apply bg-gray-500 dark:bg-gray-600 hover:bg-gray-500 text-white font-medium p-2 rounded-md shadow-sm text-sm;
     }
 
     .btn-outline {
